# thrak-beast-slayer

./: .flake8  .gitignore  CHECKLIST.md  DEVELOPMENT.md  INDEX.md  MODERNIZATION.md  Makefile  QUICKSTART.md  README-MODERNIZATION.txt  README.md  STRUCTURE.md  SUMMARY.md  VERIFICATION.txt  config.py  game_types.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
tools/: generate_test_wavs.py  test_audio.py
